--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,14 @@
         </form>
       </p>
     </div>
+    <div id="next-card-button">
+      <button id="next-card" class="btn btn-success">Next</button>
+    </div>
+    <div>
+      <p>
+        Score = <span id="scorespan">0</span>
+      </p>
+    </div>
 
   </body>
 </html>
